src/css/navbar.css
nav .btn {
    background-color: #9D92CCff;
    border-color: #9D92CCff;
    color: #ffffff;
}

nav .btn:hover {
    background-color: #e5e5e5;
    border-color: #ffffff;
    color: #363636;
}

nav .btn:active {
    background-color: #e5e5e5 !important;
    border-color: #e5e5e5;
    color: #363636 !important;
}
.navbar-brand {
    font-family: 'Jockey One', sans-serif;
}

.dark {
    background-color: #3C4892ff;
    color: #ffffff;
}

.dark:hover {
    color: #ffffff;
}

.dropdown-menu {
    background-color: #3C4892ff;
    color: #ffffff;
}

.dropdown-menu:hover {
    background-color: #3C4892ff;
    color: #ffffff;
}

#basic-nav-dropdown {
    background-color: #3C4892ff;
    color: #ffffff;
}

.dropdown-item:hover {
    background-color: #9D92CCff;
    color: #242f40;
}

.invis {
    position: absolute;
    color: transparent;
    z-index: -1;
    text-align: center;
    margin-left: auto;
    margin-right:auto;
    left: 0;
    right: 0;
    width: 200px;
}

